# kyotodd

./: .gitignore  CLAUDE.md  CMakeLists.txt  KNOWN_ISSUES.md  LICENSE  README.md  README_ja.md  functions.md  python_func.md  review1.md  review20260317.md  review20260318.md  review20260321_11.md  review20260321_8.md  review20260321_9.md  review20260323_1.md  review20260323_2.md  undocument.md
.github/workflows/: docs.yml
app/BDDQueen/: README.txt  bddqueen.cpp  bddqueen_BDD.cpp  bddqueen_ZDD.cpp
app/CNFSample/: README.txt  cnfsample.cpp  example.cnf  pigeon.cnf
app/RegexSeqBDD/: README.txt  regex_seqbdd.cpp
app/Sudoku/: README.txt  easy.txt  multi.txt  sudoku.cpp  unsat.txt
app/SvgExamples/: svg_examples.cpp
app/coloring/: README.txt  c5.txt  coloring.cpp  k4.txt  petersen.txt  small.txt
app/knapsack/: README.txt  knapsack.cpp  medium.txt  small.txt  tight.txt
app/setcover/: README.txt  infeasible.txt  medium.txt  setcover.cpp  small.txt
app/swapbound/: README.txt  swapbound.cpp
app/wmc/: README.txt  medium.txt  small.txt  unsat.txt  wmc.cpp
docs/: Doxyfile  Makefile  concepts.rst  conf.py  index.rst  requirements.txt
docs/api/: index.rst
docs/api/cpp/: base.rst  index.rst  io.rst  ops_bdd.rst  ops_bddv.rst  ops_btoi.rst  ops_ctoi.rst  ops_mlzbddv.rst  ops_mtbdd.rst  ops_mvdd.rst  ops_pidd.rst  ops_qdd.rst  ops_rotpidd.rst  ops_seqbdd.rst  ops_sop.rst  ops_unreduced_dd.rst  ops_zbddv.rst  ops_zdd.rst  types.rst
docs/api/python/: bdd.rst  functions.rst  index.rst  memo.rst  mtbdd.rst  mvdd.rst  pidd.rst  qdd.rst  rotpidd.rst  seqbdd.rst  unreduced_dd.rst  zdd.rst
docs/tutorials/: bdd_basics.rst  getting_started.rst  index.rst  installation.rst  zdd_basics.rst
include/: bdd.h  bdd_base.h  bdd_class.h  bdd_internal.h  bdd_io.h  bdd_node.h  bdd_ops.h  bdd_types.h  bddv.h  bigint.hpp  btoi.h  ctoi.h  dd_base.h  mlzbddv.h  mtbdd.h  mtbdd_class.h  mtbdd_core.h  mtbdd_io.h  mvdd.h  mvzdd_iter.h  pidd.h  qdd.h  rotpidd.h  seqbdd.h  sop.h  svg_export.h  unreduced_dd.h  zbddv.h  zdd_class.h  zdd_ops.h  zdd_random_iter.h  zdd_rank_iter.h  zdd_weight_iter.h
log/: review20260321_10.md
python/: CMakeLists.txt  pyproject.toml
python/src/kyotodd/: __init__.py  _binding.cpp  _core.pyi
python/tests/: conftest.py  test_bdd.py  test_bdd_new.py  test_io.py  test_module.py  test_mtbdd.py  test_mvdd.py  test_new_wrappers.py  test_pidd.py  test_qdd.py  test_remaining.py  test_rotpidd.py  test_seqbdd.py  test_unreduced_dd.py  test_zdd.py  test_zdd_new.py
src/: bdd.cpp  bdd_base.cpp  bdd_class.cpp  bdd_class_iter.cpp  bdd_io.cpp  bdd_io_binary.cpp  bdd_io_common.h  bdd_io_graphillion.cpp  bdd_io_graphviz.cpp  bdd_io_knuth.cpp  bdd_ops.cpp  bdd_ops_iter.cpp  bddv.cpp  btoi.cpp  ctoi.cpp  main.cpp  mlzbddv.cpp  mtbdd.cpp  mtbdd_iter.cpp  mvdd.cpp  mvzdd_iter.cpp  pidd.cpp  qdd.cpp  qdd_iter.cpp  rotpidd.cpp  seqbdd.cpp  sop.cpp  svg_export.cpp  svg_export_internal.h  svg_export_mt.cpp  svg_export_mvdd.cpp  unreduced_dd.cpp  unreduced_dd_iter.cpp  zbddv.cpp  zdd_adv.cpp  zdd_adv2.cpp  zdd_adv2_iter.cpp  zdd_adv_count.cpp  zdd_adv_count_iter.cpp  zdd_adv_filter.cpp  (+11 more)
test/: test_bdd.cpp  test_bdd1.cpp  test_bdd2.cpp  test_bdd_io.cpp  test_bddv.cpp  test_btoi.cpp  test_ctoi.cpp  test_ddbase.cpp  test_mlzbddv.cpp  test_mtbdd.cpp  test_mvdd.cpp  test_mvdd1.cpp  test_mvdd2.cpp  test_pidd.cpp  test_qdd.cpp  test_rotpidd.cpp  test_seqbdd.cpp  test_sop.cpp  test_svg_export.cpp  test_unreduced_dd.cpp  test_zbddv.cpp  test_zdd_advanced.cpp  test_zdd_advanced1.cpp  test_zdd_advanced2.cpp  test_zdd_advanced3.cpp  test_zdd_count.cpp  test_zdd_count1.cpp  test_zdd_count2.cpp  test_zdd_count3.cpp  test_zdd_ops.cpp  test_zdd_ops1.cpp  test_zdd_ops2.cpp  test_zdd_random_iter.cpp  test_zdd_rank_iter.cpp  test_zdd_weight_iter.cpp
